# kc-internship-job-market-dashboard

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
data/raw/: job_postings_sample.csv
scripts/: check_csv.py
src/job_market/: __init__.py  data_loader.py  skill_analyzer.py
